--- a/src/App.css
+++ b/src/App.css
@@ -2,10 +2,12 @@
     opacity: 0.9;
     box-shadow: 0 3px 6px rgba(0,0,0,0.16), 0 3px 6px rgba(0,0,0,0.23);
     position: relative;
+    transition: all 0.3s cubic-bezier(.25,.8,.25,1);
 }
 
-.nice-code * {
+.nice-code > * {
     border-radius: 6px;
+    transition: all 0.3s cubic-bezier(.25,.8,.25,1);
 }
 
 .left {
