--- a/src/App.css
+++ b/src/App.css
@@ -44,3 +44,12 @@ video.fullScreen {
 video.background {
     z-index: -1000;
 }
+
+.bar {
+    position: absolute;
+    height: 3%;
+    background-image: linear-gradient( 135deg, #ABDCFF 10%, #0396FF 100%);
+    bottom: 0;
+    border-radius: 0 4px 0 4px;
+    transition: all 600ms cubic-bezier(0.6, -0.28, 0.735, 0.045);
+}
